--- a/Angular2\conFusion/src/app/app.component.html
+++ b/Angular2\conFusion/src/app/app.component.html
@@ -1,3 +1,13 @@
 <md-toolbar color="primary"> <span>Ristorante Con Fusion</span> </md-toolbar>
 
 
+<button md-button (click)="openSnackBar()" aria-label="Show an example snack-bar">
+  Pizza party
+</button>
+
+
+<button md-button (click)="openDialog()" aria-label="Show an example dialog">
+  dialog
+</button>
+
+<app-menu></app-menu>
