--- a/Angular2\conFusion/src/app/dishdetail/dishdetail.component.html
+++ b/Angular2\conFusion/src/app/dishdetail/dishdetail.component.html
@@ -22,7 +22,7 @@
     </md-card>
   </div>
 
-  <div fxFlex="40">
+  <div fxFlex="40" *ngIf="dish">
     <md-card> 
       <md-card-header>
         <md-card-title>
