Header and Footer

--- a/Angular2\conFusion/src/app/app.component.html
+++ b/Angular2\conFusion/src/app/app.component.html
@@ -1,5 +1,6 @@
 <md-toolbar color="primary"> <span>Ristorante Con Fusion</span> </md-toolbar>
 
+<app-header></app-header>
 
 <button md-button (click)="openSnackBar()" aria-label="Show an example snack-bar">
   Pizza party
@@ -11,3 +12,5 @@
 </button>
 
 <app-menu></app-menu>
+
+<app-footer></app-footer>
