--- a/Ionic\conFusion/src/pages/contact/contact.scss
+++ b/Ionic\conFusion/src/pages/contact/contact.scss
@@ -1,3 +1,14 @@
 page-contact {
+    ion-card {
+        position: relative;
+        font-style: italic;
+      }
+    
+      .card-title {
+        color: #673AB7;
+        font-style: normal;
+        font-size: 1.4em;
+      }
+    
 
 }
