--- a/Angular2\conFusion/src/app/footer/footer.component.html
+++ b/Angular2\conFusion/src/app/footer/footer.component.html
@@ -14,9 +14,9 @@ fxLayoutGap="10px">
     <h4>Links</h4>
     <md-list>
       <md-list-item><a md-button routerLink="/home" routerLinkActive="active">Home</a></md-list-item>
-      <md-list-item><a md-button routerLink="/About" routerLinkActive="active">About</a></md-list-item>
-      <md-list-item><a md-button routerLink="/Menu" routerLinkActive="active">Menu</a></md-list-item>
-      <md-list-item><a md-button routerLink="/ContactUs" routerLinkActive="active">Contact</a></md-list-item>
+      <md-list-item><a md-button routerLink="/aboutus" routerLinkActive="active">About</a></md-list-item>
+      <md-list-item><a md-button routerLink="/menu" routerLinkActive="active">Menu</a></md-list-item>
+      <md-list-item><a md-button routerLink="/contactus" routerLinkActive="active">Contact</a></md-list-item>
     </md-list>
   </div>
   <div fxFlex="50">
