--- a/Angular2\conFusion/src/app/dishdetail/dishdetail.component.html
+++ b/Angular2\conFusion/src/app/dishdetail/dishdetail.component.html
@@ -1,6 +1,4 @@
-<div class="container" fxLayout="row" 
-  fxLayout.sm="column" fxLayout.xs="column" 
-  fxLayoutAlign.gt-md="space-around center"
+<div class="container" fxLayout="row" fxLayout.sm="column" fxLayout.xs="column" fxLayoutAlign.gt-md="space-around center"
   fxLayoutGap="10px" fxLayoutGap.xs="0">
 
   <div fxFlex="40" *ngIf="dish">
@@ -16,18 +14,18 @@
         </p>
       </md-card-content>
       <md-card-actions>
-          <button md-button [routerLink]="['/dishdetail', prev]"><span class="fa fa-chevron-left fa-lg"></span></button>
-          <button md-button (click)="goBack()">BACK</button>
-          <button md-button>LIKE</button>
-          <button md-button>SHARE</button>
-          <span class="flex-spacer"></span>
-          <button md-button [routerLink]="['/dishdetail', next]"><span class="fa fa-chevron-right fa-lg"></span></button>
-        </md-card-actions>
+        <button md-button [routerLink]="['/dishdetail', prev]"><span class="fa fa-chevron-left fa-lg"></span></button>
+        <button md-button (click)="goBack()">BACK</button>
+        <button md-button>LIKE</button>
+        <button md-button>SHARE</button>
+        <span class="flex-spacer"></span>
+        <button md-button [routerLink]="['/dishdetail', next]"><span class="fa fa-chevron-right fa-lg"></span></button>
+      </md-card-actions>
     </md-card>
   </div>
 
   <div fxFlex="40" *ngIf="dish">
-    <md-card> 
+    <md-card>
       <md-card-header>
         <md-card-title>
           <h3>Comments</h3>
@@ -40,11 +38,44 @@
             <p md-line>{{comment.rating}} Stars</p>
             <p md-line>-- {{comment.author}} {{comment.date | date}} </p>
           </md-list-item>
+          <md-list-item *ngIf="commentForm.valid">
+            <h4 md-line>{{commentForm.value.comment}}</h4>
+            <p md-line>{{commentForm.value.rating}} Stars</p>
+            <p md-line>-- {{commentForm.value.author}} </p>
+          </md-list-item>
+          <md-divider></md-divider>
         </md-list>
+        <div class="form-size">
+            <form novalidate [formGroup]="commentForm" (ngSubmit)="onSubmit()">
+              <p>
+                <md-input-container class="full-width" dividerColor="{{(formErrors.author) ? 'warn' : 'primary'}}" >
+                  <input mdInput formControlName="author" placeholder="Name" type="text" required>
+                  <md-hint>
+                    <span [hidden]="!(formErrors.author)">
+                      {{formErrors.author}}</span>
+                  </md-hint>
+                </md-input-container>
+              </p>
+              <p>
+                <md-slider min="1" max="5" step="1" formControlName="rating" thumbLabel></md-slider>
+              </p>
+              <p>
+                <md-input-container class="full-width"  dividerColor="{{(formErrors.comment) ? 'warn' : 'primary'}}" >
+                  <textarea mdInput formControlName="comment" placeholder="Your Comment" rows=4 required></textarea>
+                  <md-hint>
+                      <span [hidden]="!(formErrors.comment)">
+                        {{formErrors.comment}}</span>
+                    </md-hint>
+                </md-input-container>
+              </p>
+              <button type="submit" md-button class="background-primary text-floral-white" [disabled]="commentForm.invalid">Submit</button>
+            </form> 
+        </div>
       </md-card-content>
     </md-card>
   </div>
   <div [hidden]="dish">
-      <md-spinner></md-spinner><h4>Loading . . . Please Wait</h4>
-    </div>
+    <md-spinner></md-spinner>
+    <h4>Loading . . . Please Wait</h4>
+  </div>
 </div>
