--- a/Angular2\conFusion/src/app/dishdetail/dishdetail.component.html
+++ b/Angular2\conFusion/src/app/dishdetail/dishdetail.component.html
@@ -74,8 +74,11 @@
       </md-card-content>
     </md-card>
   </div>
-  <div [hidden]="dish">
-    <md-spinner></md-spinner>
-    <h4>Loading . . . Please Wait</h4>
+  <div [hidden]="dish || errMess">
+    <md-spinner></md-spinner><h4>Loading . . . Please Wait</h4>
+  </div>
+  <div *ngIf="errMess">
+    <h2>Error</h2>
+    <h4>{{errMess}}</h4>
   </div>
 </div>
