--- a/Angular2\conFusion/src/app/about/about.component.html
+++ b/Angular2\conFusion/src/app/about/about.component.html
@@ -54,10 +54,10 @@
       </div>
 
 
-        <div fxFlex>
+        <div fxFlex [@expand]>
           <h2>Corporate Leadership</h2>
           <md-list dense>
-            <md-list-item *ngFor="let leader of leaders">
+            <md-list-item *ngFor="let leader of leaders" >
                     <img md-list-avatar src={{leader.image}} alt={{leader.name}}>
                     <h3 md-line>{{leader.name}}  {{leader.abbr}} </h3>
                     <p md-line> {{leader.designation}} </p>
