--- a/Angular2\conFusion/src/app/contact/contact.component.html
+++ b/Angular2\conFusion/src/app/contact/contact.component.html
@@ -34,9 +34,7 @@
 
   <div fxFlex fxFlexOffset="20px" class="form-size">
     <h3>Send us your Feedback</h3>
-    <p>{{ feedbackForm.value | json }} {{ feedbackForm.status | json }}</p>
-
-    <form novalidate [formGroup]="feedbackForm" (ngSubmit)="onSubmit()">
+    <form novalidate [formGroup]="feedbackForm" (ngSubmit)="onSubmit()" *ngIf="!feedback && !submitting" [@expand]>
       <p>
         <md-input-container class="half-width" dividerColor="{{(formErrors.firstname) ? 'warn' : 'primary'}}">
           <input mdInput formControlName="firstname" placeholder="First Name" type="text" required>
@@ -88,7 +86,21 @@
       </p>
       <button type="submit" md-button class="background-primary text-floral-white" [disabled]="feedbackForm.invalid">Submit</button>
     </form>
+    <md-list *ngIf="feedback && !submitting" [@expand]>
+      <md-list-item >
+        <h4 md-line>Your Submission</h4>
+        <p md-line>First Name: {{feedback.firstname}}</p>
+        <p md-line>Last Name: {{feedback.lastname}}</p>
+        <p md-line>Tel. Number: {{feedback.telnum}}</p>
+        <p md-line>Email: {{feedback.email}}</p>
+        <p md-line>Contact you?: {{feedback.agree}}</p>
+        <p md-line>How?: {{feedback.contacttype}}</p>
+        <p md-line>Feeback: {{feedback.message}}</p>
+      </md-list-item>
+    </md-list>
+    <div *ngIf="submitting" [@expand]>
+      <md-spinner></md-spinner><h4>Loading . . . Please Wait</h4>
+    </div>
   </div>
-
 
 </div>
