--- a/Angular2/conFusion/src/app/about/about.component.html
+++ b/Angular2/conFusion/src/app/about/about.component.html
@@ -19,13 +19,13 @@
           Peter Pan, that featured for the first time the world's best cuisines in a pan.</p>
       </div>
       <div fxFlex="30">
-        <md-card>
-          <md-card-header>
-            <md-card-title>
+        <mat-card>
+          <mat-card-header>
+            <mat-card-title>
               <h2>Facts At a Glance</h2>
-            </md-card-title>
-          </md-card-header>
-          <md-card-content>
+            </mat-card-title>
+          </mat-card-header>
+          <mat-card-content>
             <dl>
               <dt>Started</dt>
               <dd>3 Feb. 2013</dd>
@@ -36,14 +36,14 @@
               <dt>Employees</dt>
               <dd>40</dd>
             </dl>
-          </md-card-content>
-        </md-card>
+          </mat-card-content>
+        </mat-card>
       </div>
     </div>
   </div>
 
   <div fxFlex>
-    <md-card>
+    <mat-card>
       <blockquote>
         <h3>You better cut the pizza in four pieces because I'm not hungry enough to eat six.</h3>
         <footer>-- Yogi Berra,
@@ -51,23 +51,23 @@
                             P. Pepe, Diversion Books, 2014</cite>
         </footer>
       </blockquote>
-    </md-card>
+    </mat-card>
   </div>
 
 
   <div fxFlex [@expand]>
     <h2>Corporate Leadership</h2>
-    <md-list dense>
-      <md-list-item *ngFor="let leader of leaders">
-        <img md-list-avatar src="{{BaseURL + leader.image}}" alt={{leader.name}}>
-        <h3 md-line>{{leader.name}} {{leader.abbr}} </h3>
-        <p md-line> {{leader.designation}} </p>
-        <p md-line> {{leader.description}} </p>
-      </md-list-item>
-    </md-list>
+    <mat-list dense>
+      <mat-list-item *ngFor="let leader of leaders">
+        <img mat-list-avatar src="{{BaseURL + leader.image}}" alt={{leader.name}}>
+        <h3 mat-line>{{leader.name}} {{leader.abbr}} </h3>
+        <p mat-line> {{leader.designation}} </p>
+        <p mat-line> {{leader.description}} </p>
+      </mat-list-item>
+    </mat-list>
   </div>
   <div [hidden]="leaders || errMess">
-    <md-spinner></md-spinner>
+    <mat-spinner></mat-spinner>
     <h4>Loading . . . Please Wait</h4>
   </div>
   <div *ngIf="errMess">
