--- a/Angular2/conFusion/src/app/app.component.html
+++ b/Angular2/conFusion/src/app/app.component.html
@@ -1,4 +1,4 @@
-<md-toolbar color="primary"> <span>Ristorante Con Fusion</span> </md-toolbar>
+<mat-toolbar color="primary"> <span>Ristorante Con Fusion</span> </mat-toolbar>
 
 <app-header></app-header>
 
