--- a/Angular2/conFusion/src/app/dishdetail/dishdetail.component.html
+++ b/Angular2/conFusion/src/app/dishdetail/dishdetail.component.html
@@ -2,80 +2,80 @@
   fxLayoutGap="10px" fxLayoutGap.xs="0">
 
   <div fxFlex="40" *ngIf="dish" [@visibility]="visibility" >
-    <md-card>
-      <md-card-header>
-        <md-card-title>
+    <mat-card>
+      <mat-card-header>
+        <mat-card-title>
           <h3>{{dish.name | uppercase}}</h3>
-        </md-card-title>
-      </md-card-header>
-      <img md-card-image src="{{BaseURL + dish.image}}" alt={{dish.name}}>
-      <md-card-content>
+        </mat-card-title>
+      </mat-card-header>
+      <img mat-card-image src="{{BaseURL + dish.image}}" alt={{dish.name}}>
+      <mat-card-content>
         <p>{{dish.description}}
         </p>
-      </md-card-content>
-      <md-card-actions>
-        <button md-button [routerLink]="['/dishdetail', prev]"><span class="fa fa-chevron-left fa-lg"></span></button>
-        <button md-button (click)="goBack()">BACK</button>
-        <button md-button>LIKE</button>
-        <button md-button>SHARE</button>
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-button [routerLink]="['/dishdetail', prev]"><span class="fa fa-chevron-left fa-lg"></span></button>
+        <button mat-button (click)="goBack()">BACK</button>
+        <button mat-button>LIKE</button>
+        <button mat-button>SHARE</button>
         <span class="flex-spacer"></span>
-        <button md-button [routerLink]="['/dishdetail', next]"><span class="fa fa-chevron-right fa-lg"></span></button>
-      </md-card-actions>
-    </md-card>
+        <button mat-button [routerLink]="['/dishdetail', next]"><span class="fa fa-chevron-right fa-lg"></span></button>
+      </mat-card-actions>
+    </mat-card>
   </div>
 
   <div fxFlex="40" *ngIf="dish" [@visibility]="visibility" >
-    <md-card>
-      <md-card-header>
-        <md-card-title>
+    <mat-card>
+      <mat-card-header>
+        <mat-card-title>
           <h3>Comments</h3>
-        </md-card-title>
-      </md-card-header>
-      <md-card-content>
-        <md-list>
-          <md-list-item *ngFor="let comment of dish.comments">
-            <h4 md-line>{{comment.comment}}</h4>
-            <p md-line>{{comment.rating}} Stars</p>
-            <p md-line>-- {{comment.author}} {{comment.date | date}} </p>
-          </md-list-item>
-          <md-list-item *ngIf="commentForm.valid">
-            <h4 md-line>{{commentForm.value.comment}}</h4>
-            <p md-line>{{commentForm.value.rating}} Stars</p>
-            <p md-line>-- {{commentForm.value.author}} </p>
-          </md-list-item>
-          <md-divider></md-divider>
-        </md-list>
+        </mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+        <mat-list>
+          <mat-list-item *ngFor="let comment of dish.comments">
+            <h4 mat-line>{{comment.comment}}</h4>
+            <p mat-line>{{comment.rating}} Stars</p>
+            <p mat-line>-- {{comment.author}} {{comment.date | date}} </p>
+          </mat-list-item>
+          <mat-list-item *ngIf="commentForm.valid">
+            <h4 mat-line>{{commentForm.value.comment}}</h4>
+            <p mat-line>{{commentForm.value.rating}} Stars</p>
+            <p mat-line>-- {{commentForm.value.author}} </p>
+          </mat-list-item>
+          <mat-divider></mat-divider>
+        </mat-list>
         <div class="form-size">
             <form novalidate [formGroup]="commentForm" (ngSubmit)="onSubmit()">
               <p>
-                <md-input-container class="full-width" dividerColor="{{(formErrors.author) ? 'warn' : 'primary'}}" >
+                <mat-input-container class="full-width" dividerColor="{{(formErrors.author) ? 'warn' : 'primary'}}" >
                   <input mdInput formControlName="author" placeholder="Name" type="text" required>
-                  <md-hint>
+                  <mat-hint>
                     <span [hidden]="!(formErrors.author)">
                       {{formErrors.author}}</span>
-                  </md-hint>
-                </md-input-container>
+                  </mat-hint>
+                </mat-input-container>
               </p>
               <p>
-                <md-slider min="1" max="5" step="1" formControlName="rating" thumbLabel></md-slider>
+                <mat-slider min="1" max="5" step="1" formControlName="rating" thumbLabel></mat-slider>
               </p>
               <p>
-                <md-input-container class="full-width"  dividerColor="{{(formErrors.comment) ? 'warn' : 'primary'}}" >
+                <mat-input-container class="full-width"  dividerColor="{{(formErrors.comment) ? 'warn' : 'primary'}}" >
                   <textarea mdInput formControlName="comment" placeholder="Your Comment" rows=4 required></textarea>
-                  <md-hint>
+                  <mat-hint>
                       <span [hidden]="!(formErrors.comment)">
                         {{formErrors.comment}}</span>
-                    </md-hint>
-                </md-input-container>
+                    </mat-hint>
+                </mat-input-container>
               </p>
-              <button type="submit" md-button class="background-primary text-floral-white" [disabled]="commentForm.invalid">Submit</button>
+              <button type="submit" mat-button class="background-primary text-floral-white" [disabled]="commentForm.invalid">Submit</button>
             </form> 
         </div>
-      </md-card-content>
-    </md-card>
+      </mat-card-content>
+    </mat-card>
   </div>
   <div [hidden]="dish || errMess">
-    <md-spinner></md-spinner><h4>Loading . . . Please Wait</h4>
+    <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
   </div>
   <div *ngIf="errMess">
     <h2>Error</h2>
