--- a/Angular2\conFusion/src/app/home/home.component.html
+++ b/Angular2\conFusion/src/app/home/home.component.html
@@ -1,21 +1,21 @@
 <div class="container" fxLayout="row" fxLayout.sm="column" fxLayout.xs="column" fxLayoutAlign.gt-md="space-around center"
     fxLayoutGap="10px">
 
-    <md-card *ngIf="dish" fxFlex [@expand]>
-        <md-card-header>
-            <div md-card-avatar></div>
-            <md-card-title>
+    <mat-card *ngIf="dish" fxFlex [@expand]>
+        <mat-card-header>
+            <div mat-card-avatar></div>
+            <mat-card-title>
                 <h3>{{dish.name | uppercase}}</h3>
-            </md-card-title>
-        </md-card-header>
-        <img md-card-image src="{{BaseURL + dish.image}}" alt={{dish.name}}>
-        <md-card-content>
+            </mat-card-title>
+        </mat-card-header>
+        <img mat-card-image src="{{BaseURL + dish.image}}" alt={{dish.name}}>
+        <mat-card-content>
             <p>{{dish.description}}
             </p>
-        </md-card-content>
-    </md-card>
+        </mat-card-content>
+    </mat-card>
     <div [hidden]="dish || dishErrMess">
-        <md-spinner></md-spinner>
+        <mat-spinner></mat-spinner>
         <h4>Loading . . . Please Wait</h4>
     </div>
     <div *ngIf="dishErrMess">
@@ -23,21 +23,21 @@
         <h4>{{dishErrMess}}</h4>
     </div>
 
-    <md-card *ngIf="promotion" fxFlex [@expand]>
-        <md-card-header>
-            <div md-card-avatar></div>
-            <md-card-title>
+    <mat-card *ngIf="promotion" fxFlex [@expand]>
+        <mat-card-header>
+            <div mat-card-avatar></div>
+            <mat-card-title>
                 <h3>{{promotion.name | uppercase}}</h3>
-            </md-card-title>
-        </md-card-header>
-        <img md-card-image src="{{BaseURL + promotion.image}}" alt={{promotion.name}}>
-        <md-card-content>
+            </mat-card-title>
+        </mat-card-header>
+        <img mat-card-image src="{{BaseURL + promotion.image}}" alt={{promotion.name}}>
+        <mat-card-content>
             <p>{{promotion.description}}
             </p>
-        </md-card-content>
-    </md-card>
+        </mat-card-content>
+    </mat-card>
     <div [hidden]="promotion || promoErrMess">
-        <md-spinner></md-spinner>
+        <mat-spinner></mat-spinner>
         <h4>Loading . . . Please Wait</h4>
     </div>
     <div *ngIf="promoErrMess">
@@ -45,22 +45,22 @@
         <h4>{{promoErrMess}}</h4>
     </div>
 
-    <md-card *ngIf="leader" fxFlex [@expand]>
-        <md-card-header>
-            <div md-card-avatar></div>
-            <md-card-title>
+    <mat-card *ngIf="leader" fxFlex [@expand]>
+        <mat-card-header>
+            <div mat-card-avatar></div>
+            <mat-card-title>
                 <h3>{{leader.name | uppercase}}</h3>
-            </md-card-title>
-        </md-card-header>
-        <img md-card-image src="{{BaseURL + leader.image}}" alt={{leader.name}}>
-        <md-card-content>
-            <p md-line>{{leader.designation}}</p>
+            </mat-card-title>
+        </mat-card-header>
+        <img mat-card-image src="{{BaseURL + leader.image}}" alt={{leader.name}}>
+        <mat-card-content>
+            <p mat-line>{{leader.designation}}</p>
             <p>{{leader.description}}</p>
-        </md-card-content>
-    </md-card>
+        </mat-card-content>
+    </mat-card>
 
     <div [hidden]="leader || leaderErrMess">
-        <md-spinner></md-spinner>
+        <mat-spinner></mat-spinner>
         <h4>Loading . . . Please Wait</h4>
     </div>
     <div *ngIf="leaderErrMess">
